Add api to giphy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-
+    <img src="#">
+    <script>
+        const img = document.querySelector('img');
+        fetch('https://api.giphy.com/v1/gifs/translate?api_key=4E4dbzRbSLtQYlGXSMJiEpcTOV9L7iGJ&s=cats', { mode: 'cors' })
+            .then(function (response) {
+                return response.json();
+            })
+            .then(function (response) {
+                console.log(response.data.images.original.url);
+            });
+    </script>
 </body>
 
 </html>
