--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 return response.json();
             })
             .then(function (response) {
-                console.log(response.data.images.original.url);
+                img.src = response.data.images.original.url;
             });
     </script>
 </body>
