--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <img src="#">
+    <div class="img">
+        <img src="#">
+    </div>
     <script>
         const img = document.querySelector('img');
-        fetch('https://api.giphy.com/v1/gifs/translate?api_key=4E4dbzRbSLtQYlGXSMJiEpcTOV9L7iGJ&s=cats', { mode: 'cors' })
+        fetch('https://api.giphy.com/v1/gifs/translate?api_key=4E4dbzRbSLtQYlGXSMJiEpcTOV9L7iGJ&s=ninjas', { mode: 'cors' })
             .then(function (response) {
                 return response.json();
             })
