Swap out the giphy query to cats

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <script>
         const img = document.querySelector('img');
-        fetch('https://api.giphy.com/v1/gifs/translate?api_key=4E4dbzRbSLtQYlGXSMJiEpcTOV9L7iGJ&s=ninjas', { mode: 'cors' })
+        fetch('https://api.giphy.com/v1/gifs/translate?api_key=4E4dbzRbSLtQYlGXSMJiEpcTOV9L7iGJ&s=cats', { mode: 'cors' })
             .then(function (response) {
                 return response.json();
             })
